contrast fix for .alert-warning

--- a/src/Dashboard/Content/bootstrap/css/bootstrap.css
+++ b/src/Dashboard/Content/bootstrap/css/bootstrap.css
@@ -5053,7 +5053,7 @@ a.thumbnail:focus {
 }
 
 .alert-warning {
-  color: #c09853;
+  color: #6d572c;
   background-color: #fcf8e3;
   border-color: #fbeed5;
 }
